Arreglo para que salga el nombre

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <p>OJO: Esta app no calcula solo una nota.</p>
             
             <form method="post" action="/calcular">
-                <label for="Nombre">Nombre:</label>
+                <label for="nombre">Nombre:</label>
                 <input type="text" name="Nombre">
             
         <div class="notas-contenedor">
