Arreglo para margen al final

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <div class="form_box">
             <h1>Calculadora para nota</h1>
             <p>Esta app web te ayuda a calcular tu final en una de tus clases.</p>
-            <p>Ingrese las notas de sus quices y exámenes. Solo se necesita un peso por cada grupo.</p>
+            <p>Ingrese las notas de sus quizes y exámenes. Solo se necesita un peso por cada grupo.</p>
             <p>OJO: Esta app no calcula solo una nota.</p>
             
             <form method="post" action="/calcular">
@@ -20,7 +20,7 @@
             
         <div class="notas-contenedor">
             <div class="grupo-notas">    
-                <h1>Notas de quices</h1>
+                <h1>Notas de quizes</h1>
                 <div id="quices-contenedor"></div>
                 <button type="button" onclick="agregarQuiz()">Agregar Quice</button>
                 <label for="peso_quices">Peso total de los Quizes(%)</label>
@@ -28,7 +28,7 @@
             </div>
             
             <div class="grupo-notas">
-                <h1>Notas examenes</h1>
+                <h1>Notas de examenes</h1>
                 <div id="examenes-contenedor"></div>
                 <button type="button" onclick="agregarExamen()">Agregar Examen</button>
                 <label for="peso_examen">Peso total de los Examens(%)</label>
