--- a/static/style.css
+++ b/static/style.css
@@ -28,6 +28,7 @@ body{
     width: 100%;
     max-width: 950px;
     box-sizing: border-box;
+    margin-bottom: 60px;
 }
 @media screen and (max-width:600px){
     .form_box{
