--- a/static/style.css
+++ b/static/style.css
@@ -121,6 +121,9 @@ a button.hover{
 } 
 .grupo-notas{
     flex: 1 1 400px;
+    width: 300px;
+    width: 75%;
+    max-width: 950px;
     max-width: 100%;
     border: 1px solid #ccc;
     padding: 20px;
