--- a/static/style.css
+++ b/static/style.css
@@ -121,12 +121,12 @@ a button.hover{
 } 
 .grupo-notas{
     flex: 1 1 400px;
-    width: 300px;
-    width: 75%;
     max-width: 950px;
     max-width: 100%;
+    min-width: 200px;
     border: 1px solid #ccc;
     padding: 20px;
+    margin-bottom: 20px;
     border-radius: 10px;
     background-color: #f9f9f9;
     box-sizing: border-box;
