--- a/static/style.css
+++ b/static/style.css
@@ -61,6 +61,7 @@ input[type="text"]{
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    margin-bottom: 15px;
 }
 button{
     margin-top: 15px;
@@ -127,6 +128,7 @@ a button.hover{
     border: 1px solid #ccc;
     padding: 20px;
     margin-bottom: 20px;
+    padding-bottom: 20px;
     border-radius: 10px;
     background-color: #f9f9f9;
     box-sizing: border-box;
