--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             
         <div class="notas-contenedor">
             <div class="grupo-notas">    
-                <h1>Notas quizes</h1>
+                <h1>Notas de quizes</h1>
                 <div id="quices-contenedor"></div>
                 <button type="button" onclick="agregarQuiz()">Agregar Quice</button>
                 <label for="peso_quices">Peso total de los Quizes(%)</label>
@@ -28,7 +28,7 @@
             </div>
             
             <div class="grupo-notas">
-                <h1>Notas examenes</h1>
+                <h1>Notas de examenes</h1>
                 <div id="examenes-contenedor"></div>
                 <button type="button" onclick="agregarExamen()">Agregar Examen</button>
                 <label for="peso_examen">Peso total de los Examens(%)</label>
