--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="form_box">
             <h1>Calculadora para nota</h1>
-            <p>Esta app web te ayuda a calcular tu final en una de tus clases.</p>
+            <p>Esta app web te ayuda a calcular tu nota final en una de tus clases.</p>
             <p>Ingrese las notas de sus quizes y exámenes. Solo se necesita un peso por cada grupo.</p>
             <p>OJO: Esta app no calcula solo una nota.</p>
             
@@ -25,7 +25,7 @@
                     <span> de quizes</span>
                 </h1>
                 <div id="quices-contenedor"></div>
-                <button type="button" onclick="agregarQuiz()">Agregar Quice</button>
+                <button type="button" onclick="agregarQuiz()">Agregar</button>
                 <label for="peso_quices">Peso total de los Quizes(%)</label>
                 <input type="number" name="peso_quices" step="any" required>
             </div>
@@ -36,7 +36,7 @@
                     <span>de examenes</span>
                 </h1>
                 <div id="examenes-contenedor"></div>
-                <button type="button" onclick="agregarExamen()">Agregar Examen</button>
+                <button type="button" onclick="agregarExamen()">Agregar</button>
                 <label for="peso_examen">Peso total de los Examens(%)</label>
                 <input type="number" name="peso_examen" step="any" required>
             </div>
