--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             <div class="grupo-notas">    
                 <h1>
                     <span>Nota</span>
-                    <span> de quizes</span>
+                    <span>quizes</span>
                 </h1>
                 <div id="quices-contenedor"></div>
                 <button type="button" onclick="agregarQuiz()">Agregar</button>
@@ -33,7 +33,7 @@
             <div class="grupo-notas">
                 <h1>
                     <span>Nota</span>
-                    <span>de examenes</span>
+                    <span>examenes</span>
                 </h1>
                 <div id="examenes-contenedor"></div>
                 <button type="button" onclick="agregarExamen()">Agregar</button>
