--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,7 @@
         <div class="notas-contenedor">
             <div class="grupo-notas">    
                 <h1>
-                    <span>Nota</span>
-                    <span>quizes</span>
+                    <span>Nota quizes</span>
                 </h1>
                 <div id="quices-contenedor"></div>
                 <button type="button" onclick="agregarQuiz()">Agregar</button>
@@ -32,8 +31,7 @@
             
             <div class="grupo-notas">
                 <h1>
-                    <span>Nota</span>
-                    <span>examenes</span>
+                    <span>Nota examenes</span>
                 </h1>
                 <div id="examenes-contenedor"></div>
                 <button type="button" onclick="agregarExamen()">Agregar</button>
