--- a/static/style.css
+++ b/static/style.css
@@ -111,7 +111,7 @@ a button:hover{
     gap: 20px;
     margin-top: 20px;
     width: 100%;
-    box-sizing: border-box;;
+    box-sizing: border-box;
 }
 @media (max-width: 768px) {
     .notas-contenedor{
@@ -126,7 +126,6 @@ a button:hover{
     border: 1px solid #ccc;
     padding: 20px;
     margin-bottom: 20px;
-    padding-bottom: 30px;
     border-radius: 10px;
     background-color: #f9f9f9;
     box-sizing: border-box;
