--- a/static/style.css
+++ b/static/style.css
@@ -124,7 +124,7 @@ a button:hover{
     max-width: 400px;
     min-height: 350px;
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 20px 15px 30px 15px;
     margin-bottom: 20px;
     border-radius: 10px;
     background-color: #f9f9f9;
