--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,7 @@ body{
 .form_box{
     background-color: white;
     color: black;
-    margin: 0 auto 60px auto;
+    margin: 0 0 60px 0;
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
