--- a/static/style.css
+++ b/static/style.css
@@ -21,11 +21,11 @@ body{
 .form_box{
     background-color: white;
     color: black;
-    margin: 0 0 60px 0;
+    margin: 0 auto 60px auto;
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    width: 135%;
+    width: 100%;
     max-width: 1000px;
     box-sizing: border-box;
 }
