--- a/static/style.css
+++ b/static/style.css
@@ -120,8 +120,8 @@ a button:hover{
     }
 } 
 .grupo-notas{
-    flex: 1 1 300px;
-    max-width: 400px;
+    flex: 1 1 calc(50% - 20px);
+    max-width: calc(50% - 20px);;
     min-height: 350px;
     border: 1px solid #ccc;
     padding: 20px 15px 30px 15px;
