--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <div class="notas-contenedor">
             <div class="grupo-notas">    
                 <h1>
-                    <span>Nota quizes</span>
+                    <span>Nota asignaciones y quizes</span>
                 </h1>
                 <div id="quices-contenedor"></div>
                 <button type="button" onclick="agregarQuiz()">Agregar</button>
