--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <div class="notas-contenedor">
             <div class="grupo-notas">    
                 <h1>
-                    <span>Nota asignaciones y quizes</span>
+                    <span>Nota de asignaciones y quizes</span>
                 </h1>
                 <div id="quices-contenedor"></div>
                 <button type="button" onclick="agregarQuiz()">Agregar</button>
@@ -31,7 +31,7 @@
             
             <div class="grupo-notas">
                 <h1>
-                    <span>Nota examenes</span>
+                    <span>Nota de examenes</span>
                 </h1>
                 <div id="examenes-contenedor"></div>
                 <button type="button" onclick="agregarExamen()">Agregar</button>
