--- a/templates/index.html
+++ b/templates/index.html
@@ -39,9 +39,11 @@
                 <input type="number" name="peso_examen" step="any" required>
             </div>
         </div> 
-                <br><br>
+                <div class = "botones-finales">
+                 <br><br>
                  <button type ="submit">Calcular</button>
                  <button type ="reset">Limpiar</button>
+                </div>
             </form>
         </div>
     </div>
